fixed sidebar alignment with main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,11 +77,12 @@ main {
 }
 
 .benefit-section {
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
     clear: both;
     float: right;
+    margin-right: 25px;
     width: 20%;
-    height: 100%;
+    height: 940px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -96,7 +97,7 @@ main {
     text-align: center;
 }
 
-.benefit img { 
+.benefit img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -104,7 +105,7 @@ main {
 
 .services {
     margin-bottom: 20px;
-    padding: 10px;
+    padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
